Fix UMA histogram Sync.InitialState

Before SyncAuthManager::RegisterForAuthNotifications(), the
active/authenticated account isn't initialized, so the histogram would
always record "not signed in". So make sure we record the histogram
only after registering for auth.

Bug: 898430
Change-Id: I00064541cefe6cb65d5a246f12c7a8eaef469c28
Reviewed-on: https://chromium-review.googlesource.com/c/1297420
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602291}
Former-commit-id: 58505ca736e7aff6c89e8f48904b028bdf088f62